--- a/Progreso2Feijoo/MainPage.xaml
+++ b/Progreso2Feijoo/MainPage.xaml
@@ -7,29 +7,30 @@
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
+            
             <Label
-                Text="Hello, World!"
+                Text="Bienvenidos a la aplicacion de Juan Feijoo"
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
+            <Image
+                Source="imagen5.png"
+                HeightRequest="185"
+                Aspect="AspectFit"
+                SemanticProperties.Description="dot net bot in a race car number eight" />
+            
             <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+                x:Name="BotonChistesLayout"
+                Text="Chistes"
+                Clicked="BotonChistesLayout_Clicked"
+                VerticalOptions="Center" 
+                HorizontalOptions="Center"/>
+            <Button
+                x:Name="BotonAboutLayout"
+                Text="About"
+                Clicked="BotonAboutLayout_Clicked"
+                VerticalOptions="Center" 
+                HorizontalOptions="Center"/>
         </VerticalStackLayout>
     </ScrollView>
 
