--- a/Progreso2Feijoo/AboutLayout.xaml
+++ b/Progreso2Feijoo/AboutLayout.xaml
@@ -3,10 +3,36 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Progreso2Feijoo.AboutLayout"
              Title="AboutLayout">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    
+    <Grid RowDefinitions="*,*" ColumnDefinitions="*,*">
+
+
+        <Frame Grid.Row="0" Grid.Column="0" BorderColor="White" 
+            HorizontalOptions="Fill"
+            VerticalOptions="Fill">
+            <Label Text="Nombre: Juan Pablo Feijoo Arpi"  FontSize="20" HorizontalOptions="Center" VerticalOptions="Center"/>
+        </Frame>
+
+
+
+        <Frame Grid.Row="0" Grid.Column="1" BorderColor="White" BackgroundColor="Yellow"
+            HorizontalOptions="Fill"
+            VerticalOptions="Fill">
+            <Label Text="Fecha: 08/11/2003" FontSize="20"  TextColor="Black" HorizontalOptions="Center" VerticalOptions="Center"/>
+        </Frame>
+
+
+        <Frame Grid.Row="1" Grid.Column="0" BorderColor="White" BackgroundColor="Yellow"
+            HorizontalOptions="Fill"
+            VerticalOptions="Fill">
+            <Label Text="Intereses: Me gusta el PS5 y los carros"  TextColor="Black" FontSize="20" HorizontalOptions="Center" VerticalOptions="Center"/>
+        </Frame>
+
+
+        <Frame Grid.Row="1" Grid.Column="1" BorderColor="White"
+            HorizontalOptions="Fill"
+            VerticalOptions="Fill">
+            <Label Text="Version: 1.0" FontSize="20" HorizontalOptions="Center" VerticalOptions="Center"/>
+        </Frame>
+    </Grid>
 </ContentPage>
