--- a/Progreso2Feijoo/ChistesLayout.xaml
+++ b/Progreso2Feijoo/ChistesLayout.xaml
@@ -3,10 +3,27 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Progreso2Feijoo.ChistesLayout"
              Title="ChistesLayout">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <AbsoluteLayout>
+
+
+        <ScrollView AbsoluteLayout.LayoutBounds="0,0,1,1"
+                AbsoluteLayout.LayoutFlags="All">
+            <Frame Margin="20"
+               CornerRadius="20"
+               Padding="20"
+               BackgroundColor="LightGray">
+                <Label Text="Chiste no encontrado"
+                       FontSize="16"
+                   TextColor="Black" />
+            </Frame>
+        </ScrollView>
+
+
+        <Button Text="Otro chiste"
+            Clicked="BotonChistes_Clicked"
+            AbsoluteLayout.LayoutBounds="1,1,150,50"
+            AbsoluteLayout.LayoutFlags="PositionProportional"/>
+
+    </AbsoluteLayout>
+
 </ContentPage>
